# oxiv6

./: Cargo.toml  README.md
oxiv6-kernel/: Cargo.toml  build.rs
oxiv6-kernel/.cargo/: config.toml
oxiv6-kernel/src/: kalloc.rs  main.rs  println.rs  proc.rs  trampoline.S  vm.rs
oxiv6-kernel/src/dev/: mod.rs  spec.rs
