[package]
name = "oxiv6-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
sbi-rt = { version = "0.0.3", features = ["legacy"] }
spin = "0.9.8"


[lints.rust]
nonstandard_style = "deny"
deprecated_in_future = "deny"
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = "deny"
pedantic = "warn"
